# metal-operators

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benches/: kmeans_benchmark.rs  knn_benchmark.rs  pca_benchmark.rs  sklearn_kmeans.py  sklearn_knn.py  sklearn_pca.py
docs/: algorithm.md  python_api.md  rust_api.md
examples/: customer_segmentation.py  example.py  knn_example.py  movie_recommendation.py  pca_eigenfaces.py
python/metal_kmeans/: __init__.py  _native.pyi
python/metal_pca/: __init__.py  iris_pca.py  pca_demo.py
shaders/: kmeans.metal  kmeans_profile.metal  knn.metal  pca.metal
src/: lib.rs  main.rs  python.rs
src/kmeans/: mod.rs
src/knn/: mod.rs
src/metal/: mod.rs
src/pca/: mod.rs
tests/: kmeans_test.rs  knn_debug.rs  knn_debug10.rs  knn_debug11.rs  knn_debug2.rs  knn_debug3.rs  knn_debug4.rs  knn_debug5.rs  knn_debug6.rs  knn_debug7.rs  knn_debug8.rs  knn_debug9.rs  knn_test.rs  knn_timing.rs  pca_test.rs  profile_assign.rs  test_debug_d32.rs  test_k32.rs  test_k33.rs  test_k64.rs  test_multisg.rs  test_simdgroup.rs  test_simdgroup_debug.rs  test_simdgroup_multitile.rs  test_simdgroup_verify.rs  test_splitd.rs
